--- a/master peace ajloun/service-details.html
+++ b/master peace ajloun/service-details.html
@@ -225,7 +225,7 @@
             <div class="content">
                 <div class="price-container">
                     <span class="price-label">Price:</span>
-                    <p class="price"> </p>
+                    <p class="price" id="price"> </p>
                 </div>
         
                 <h1 class="title"></h1>
@@ -241,6 +241,7 @@
                                     <h2>Ajloun Castle <span style="margin: 0 20%;">Price: 10jd</span></h2>
                                     <br />
                                     <form class="bookingForm" data-service="castle">
+                                        
                                         <div class="form-group">
                                             <input required="required" type="text" name="text" autocomplete="on"
                                                 class="popinput" id="name-city" />
