--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -15,6 +15,7 @@
 integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
 crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<script src="js/OffersApi.js"></script>
 <style>
 		.search_tabs_container i{
 			color: green !important;
@@ -540,7 +541,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 				<div class="col-lg-12">
 					<!-- Offers Grid -->
 
-					<div class="offers_grid">
+					<div class="offers_grid" id="offersContainer">
 
 						<!-- Offers Item -->
 
@@ -761,7 +762,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 								</div>
 							</div>
 						</div>
-
+						</div>
 					</div>
 				</div>
 
