return the booking details

--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -769,7 +769,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 			</div>
 		</div>		
 	</div>
-
+	<img src="image2/castle11.jpg" alt="">
 	<!-- Footer -->
 <footer class="footer">
 
