--- a/master peace ajloun/service-details.html
+++ b/master peace ajloun/service-details.html
@@ -238,10 +238,10 @@
                         <div class="popcard-container">
                             <div class="popcard">
                                 <div class="popcard-content">
-                                    <h2>Ajloun Castle <span style="margin: 0 20%;">Price: 10jd</span></h2>
+                                    <h2 id="tour_name">Ajloun Castle <span style="margin: 0 20%;" id="tour_price">Price: 10jd</span></h2>
                                     <br />
                                     <form class="bookingForm" data-service="castle">
-
+                                        
                                         <div class="form-group">
                                             <input required="required" type="text" name="text" autocomplete="on"
                                                 class="popinput" id="name-city" />
@@ -255,7 +255,7 @@
                                         <div class="form-group">
                                             <input required="" type="date" autocomplete="on" class="popinput"
                                                 id="date-city" />
-                                            <label for="date-city" class="user-label">Date:</label>
+                                            <!-- <label for="date-city" class="user-label">Date:</label> -->
                                         </div>
                                         <div class="form-group">
                                             <input required="" type="number" name="text" autocomplete="on"
@@ -277,14 +277,15 @@
             </div>
         </div>
 
-
+ 
         <div class="bottom-bar">
             <div class="bar-content">
-                <span>Explore Ajloun Castle today!</span>
-                <button class="bar-button">Book Now</button>
+                <span id="bar_service_name">Loading service...</span>
+                <button class="bar-button" id="bar_button">Book Now</button>
             </div>
         </div>
-    </div>
+
+        
 
 
 
@@ -662,4 +663,4 @@
 
 </body>
 
-</html>
+</html> 
