--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -635,13 +635,12 @@
 
 
 
-    <!-- <div class="loading">
+    <div class="loading">
       <div class="loading-text">Welcome Ahmad ...</div>
       <div class="loading-spinner"></div>
-    </div> -->
+    </div>
 
 
-<a href="castle.html"></a>
     <div class="titlepages">
       <strong>INTRO</strong>
       <div id="container-stars">
