check the login

--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -636,9 +636,10 @@
 
 
     <div class="loading">
-      <div class="loading-text">Welcome Ahmad ...</div>
+      <div class="loading-text">Loading...</div>
       <div class="loading-spinner"></div>
     </div>
+
 
 
     <div class="titlepages">
