--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -620,7 +620,7 @@
                     <option>03</option>
                   </select>
                 </div>
-                
+                <button class="button search_button" >
                   <button type="button" class="button search_button" id="search_button"></button>
                   search
 
