--- a/master peace ajloun/join_us.html
+++ b/master peace ajloun/join_us.html
@@ -42,26 +42,42 @@
                 <div class="container">
                     <div class="row">
                         <div class="col d-flex flex-row">
-                            <div class="phone"><sup>Ajloun Tour<sup>360</sup></sup></div>
+                            <div class="phone">
+                                <sup>Ajloun Tour
+                                    <sup>360</sup>
+                                </sup>
+                            </div>
                             <div class="social">
                                 <ul class="social_list">
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                                        <!-- <a href="#">
+                                  <i class="fa fa-pinterest" aria-hidden="true"></i>
+                                </a> -->
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-dribbble" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-behance" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
@@ -73,11 +89,13 @@
                                     <a href="login.html">register</a>
                                 </div>
                             </div>
-                        </div>
-                        <div>
-                            <a href="edit_profile.html" class="profileimga">
-                                <img src="image/2.png" alt="" class="profileimg">
-                            </a>
+            
+                            <!-- <div>
+                                <a href="edit_profile.html" class="profileimga">
+                                  <img src="image/2.png" alt="" class="profileimg">
+                                  <i class="fa-solid fa-circle-user"></i>     
+                                </a>
+                              </div> -->
                         </div>
                     </div>
                 </div>
