--- a/master peace ajloun/login.html
+++ b/master peace ajloun/login.html
@@ -59,28 +59,42 @@
                 <div class="container">
                     <div class="row">
                         <div class="col d-flex flex-row">
-                            <div class="phone"><sup>Ajloun Tour
+                            <div class="phone">
+                                <sup>Ajloun Tour
                                     <sup>360</sup>
-                                </sup></div>
+                                </sup>
+                            </div>
                             <div class="social">
                                 <ul class="social_list">
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                                        <!-- <a href="#">
+                                  <i class="fa fa-pinterest" aria-hidden="true"></i>
+                                </a> -->
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-dribbble" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-behance" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                     <li class="social_list_item">
-                                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                        <a href="#">
+                                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
@@ -89,9 +103,16 @@
                                     <a href="login.html">login</a>
                                 </div>
                                 <div class="user_box_register user_box_link">
-                                    <a href="#">register</a>
+                                    <a href="login.html">register</a>
                                 </div>
                             </div>
+            
+                            <!-- <div>
+                                <a href="edit_profile.html" class="profileimga">
+                                  <img src="image/2.png" alt="" class="profileimg">
+                                  <i class="fa-solid fa-circle-user"></i>     
+                                </a>
+                              </div> -->
                         </div>
                     </div>
                 </div>
