--- a/master peace ajloun/about.html
+++ b/master peace ajloun/about.html
@@ -37,38 +37,52 @@
               <div class="social">
                 <ul class="social_list">
                   <li class="social_list_item">
-                    <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                    <!-- <a href="#">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                          </a> -->
                   </li>
                   <li class="social_list_item">
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#">
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
                   </li>
                   <li class="social_list_item">
-                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#">
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
                   </li>
                   <li class="social_list_item">
-                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                    <a href="#">
+                      <i class="fa fa-dribbble" aria-hidden="true"></i>
+                    </a>
                   </li>
                   <li class="social_list_item">
-                    <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
+                    <a href="#">
+                      <i class="fa fa-behance" aria-hidden="true"></i>
+                    </a>
                   </li>
                   <li class="social_list_item">
-                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="#">
+                      <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
                   </li>
                 </ul>
               </div>
               <div class="user_box ml-auto">
                 <div class="user_box_login user_box_link">
-                  <a href="#">login</a>
+                  <a href="login.html">login</a>
                 </div>
                 <div class="user_box_register user_box_link">
-                  <a href="#">register</a>
+                  <a href="login.html">register</a>
                 </div>
               </div>
-            </div>
-            <div>
-              <a href="edit_profile.html" class="profileimga">
-                <img src="image/2.png" alt="" class="profileimg">
-              </a>
+      
+              <!-- <div>
+                          <a href="edit_profile.html" class="profileimga">
+                            <img src="image/2.png" alt="" class="profileimg">
+                            <i class="fa-solid fa-circle-user"></i>     
+                          </a>
+                        </div> -->
             </div>
           </div>
         </div>
