--- a/master peace ajloun/adminDashboard/table.html
+++ b/master peace ajloun/adminDashboard/table.html
@@ -245,37 +245,27 @@
                     
                     <div class="col-sm-12 col-xl-6">
                         <div class="bg-secondary rounded h-100 p-4">
-                            <h6 class="mb-4">Color Table</h6>
-                            <table class="table table-dark">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">First Name</th>
-                                        <th scope="col">Last Name</th>
-                                        <th scope="col">Email</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>John</td>
-                                        <td>Doe</td>
-                                        <td>jhon@email.com</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>mark@email.com</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>jacob@email.com</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <h6 class="mb-4">Add User</h6>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="basic-addon1">@</span>
+                                <input type="text" class="form-control" id="username" placeholder="Username" aria-label="Username"
+                                    aria-describedby="basic-addon1">
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" id="email" placeholder="Recipient's email"
+                                    aria-label="Recipient's email" aria-describedby="basic-addon2">
+                                <span class="input-group-text" id="basic-addon2">@example.com</span>
+                            </div>
+                            <label for="basic-url" class="form-label">Password</label>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="basic-addon3">********</span>
+                                <input type="password" class="form-control" id="password" aria-describedby="basic-addon3">
+                            </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">Role</span>
+                                <input type="text" class="form-control" id="role" aria-label="Role">
+                            </div>
+                            <button class="btn btn-primary" onclick="addUsersss()">Add User</button>
                         </div>
                     </div>
                     <div class="col-sm-12 col-xl-6">
@@ -406,7 +396,9 @@
             <!-- Footer End -->
         </div>
         <!-- Content End -->
-
+        <div id="toast"
+            style="display:none; position:fixed; bottom:20px; right:20px; z-index:1000; background-color:green; color:white; padding:10px; border-radius:5px;">
+        </div>
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
