--- a/master peace ajloun/login.html
+++ b/master peace ajloun/login.html
@@ -55,7 +55,7 @@
         <header class="header">
             <!-- Top Bar -->
 
-            <div class="top_bar">
+            <div class="top_bar" id="topBar">
                 <div class="container">
                     <div class="row">
                         <div class="col d-flex flex-row">
@@ -98,21 +98,9 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="user_box ml-auto">
-                                <div class="user_box_login user_box_link">
-                                    <a href="login.html">login</a>
-                                </div>
-                                <div class="user_box_register user_box_link">
-                                    <a href="login.html">register</a>
-                                </div>
+                            <div class="user_box ml-auto" id="userBox">
+                                <!-- logOut and logIn will Apeare here -->
                             </div>
-            
-                            <!-- <div>
-                                <a href="edit_profile.html" class="profileimga">
-                                  <img src="image/2.png" alt="" class="profileimg">
-                                  <i class="fa-solid fa-circle-user"></i>     
-                                </a>
-                              </div> -->
                         </div>
                     </div>
                 </div>
@@ -559,6 +547,58 @@
     <script src="plugins/parallax-js-master/parallax.min.js"></script>
     <script src="js/about_custom.js"></script>
     <script src="js/login.js"></script>
+    <script>
+
+        // Check if JWT is in local storage
+        document.addEventListener("DOMContentLoaded", function () {
+            // Check if the element with ID 'userBox' exists
+            const userBox = document.getElementById('userBox');
+
+            if (userBox) {
+                // Check if JWT is in local storage
+                const token = localStorage.getItem('jwt');
+
+                if (token) {
+                    // If user is logged in (JWT token found), show profile link
+                    userBox.innerHTML = `
+            <a href="edit_profile.html" id ="profile_icon">Profile</a>         <small style="color: whitesmoke;">|</small>
+
+
+
+            <div class="user_box_link">
+            <a href="#" id="logoutButton">Logout</a>
+            </div>
+            `;
+
+                    // Attach logout functionality to the "Logout" button
+                    document.getElementById('logoutButton').addEventListener('click', function (event) {
+                        event.preventDefault(); // Prevent default link behavior
+                        logout();
+                    });
+                } else {
+                    // If user is not logged in, show login/register links
+                    userBox.innerHTML = `
+                <div class="user_box_login user_box_link">
+                    <a href="login.html">Login</a>
+                </div>
+                <div class="user_box_register user_box_link">
+                    <a href="login.html">Register</a>
+                </div>
+            `;
+                }
+            } else {
+                console.error("Element with ID 'userBox' not found.");
+            }
+        });
+
+        // Function to handle logout, moved outside of the event listener
+        function logout() {
+            localStorage.removeItem('jwt'); // Remove JWT from local storage
+            alert("Logged out successfully!");
+            window.location.reload(); // Reload the page to refresh the navbar
+        }
+
+    </script>
 </body>
 
 </html>
